feat(core+session+monitoring): major architecture split, unified TraceEvent model and async-ready pipeline
- Introduce fully modular architecture:
  * new flowtrace.events with CallEvent, ExceptionEvent, AsyncTransitionEvent,
    ExecutionContext and unified TraceEvent union type
  * new flowtrace.monitoring for safe sys.monitoring integration
  * new flowtrace.session as central event processor and call stack engine
  * new flowtrace.asyncio_support for task-factory hooks and async context tracking
  * new flowtrace.formatters.async_tree for async task visualization

- Rewrite core.py as a thin public API layer with backward-compatible CallEvent re-export

- Migrate all call/return/exception stack logic into session.py
- Migrate user-code filtering logic into monitoring.py
- Add async transition event support (resume / yield) compatible with PEP 669

- Update all formatters (tree, summary, debug) to work with TraceEvent union model
- Fix decorator metadata propagation and add safe __code__ access
- Add strict typing across the entire codebase; pass Mypy and Ruff cleanly

- Ensure nested tracing contexts and ContextVar-based session isolation
- Preserve backwards compatibility for external imports and public API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "flowtrace"
-version = "0.4.2"
+version = "0.5.0"
 description = "System-level execution tracer for Python 3.12+ (PEP 669)"
 authors = [{ name = "Alexandr153", email = "boss191105@bk.ru" }]
 readme = "README.md"
@@ -44,7 +44,7 @@ select = [
 ignore = [
   "E501",
 ]
-extend-ignore = ["RUF002", "RUF003", 'SIM108', "UP047"]
+extend-ignore = ["RUF002", "RUF003", 'SIM108', "UP047", "TC001"]
 
 explicit-preview-rules = true
 
