--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "flowtrace"
-version = "0.5.0"
+version = "0.5.1"
 description = "System-level execution tracer for Python 3.12+ (PEP 669)"
 authors = [{ name = "Alexandr153", email = "boss191105@bk.ru" }]
 readme = "README.md"
@@ -64,3 +64,4 @@ no_implicit_optional = true
 addopts = "-q"
 minversion = "7.0"
 pythonpath = ["."]
+asyncio_mode = "auto"
