--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -U ruff mypy pytest
+          pip install pytest pytest-asyncio
+          pip install ruff mypy
           pip install .
 
       - name: Lint (ruff)
